--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-secret.json
+# secret files
+secret*
+
+# python
+/**/__pycache__
+/**/.venv
+
+# for vscode
+.vscode
+.env
+
+# for mac
+/**/.DS_Store
+
+# test files
+/**/*sample*
+/**/*test*
