--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - DEFAULT_SLACK_CHANNEL
       - SLACK_BOT_TOKEN
       - SLACK_APP_TOKEN
-    command: python main.py
+    command: python src/main.py
     working_dir: /app/src
     volumes:
       - $PWD:/app/src
