--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+# https://pypi.org/project/pysen/
+# pysen run format && pysen run lint
+
 [tool.pysen]
 version = "0.9"
 
@@ -6,11 +9,13 @@ version = "0.9"
 enable_black = true
 enable_flake8 = true
 enable_isort = true
-enable_mypy = false
+enable_mypy = true
 mypy_preset = "strict"
 line_length = 80
 py_version = "py38"
+[tool.pysen.lint.source]
+  exclude_globs = ["**/*sample/"]
+[tool.pysen.lint.mypy_modules."pysen.scripts"]
+  preset = "entry"
 [[tool.pysen.lint.mypy_targets]]
-  paths = ["src/"]
-
-# typingが訳わからん
+  paths = ["app/"]
